Fix problems with 'align-items: end' in Chrome and Chromium

--- a/src/components/Controls.scss
+++ b/src/components/Controls.scss
@@ -17,7 +17,7 @@ $font-size: 15px;
         display: flex;
         flex: 1;
         justify-content: center;
-        align-items: end;
+        align-items: flex-end;
         margin-bottom: $spacing;
 
         > * {
