--- a/src/components/VerticalProgressBar.scss
+++ b/src/components/VerticalProgressBar.scss
@@ -13,7 +13,7 @@ $clickable-area-offset: 10px;
         background-color: $box-dark-text-dimmed-color;
         height: 100%;
         display: flex;
-        align-items: end;
+        align-items: flex-end;
 
         &, & .filled-in {
             border-radius: $width;
